# argparse2typer

./: README.md  pyproject.toml
src/argparse2typer/: __init__.py  argparse2typer.py
